# ncurses-snapshots

./: ANNOUNCE  AUTHORS  CHANGES  COPYING  INSTALL  MANIFEST  Makefile  Makefile.glibc  Makefile.in  Makefile.os2  NEWS  README  README.MinGW  TO-DO  VERSION  aclocal.m4  announce.html  announce.html.in  config.guess  config.sub  configure  configure.in  dist.mk  edit_cfg.sh  mk-0th.awk  mk-1st.awk  mk-2nd.awk  mk-dlls.sh  ncurses.lsm  patchlevel.h  shlib  tar-copy.sh
Ada95/: Makefile.in  TODO  aclocal.m4  configure  configure.in  make-tar.sh
Ada95/ada_include/: Makefile.in  terminal_interface-curses-aux.adb  terminal_interface-curses-aux.ads  terminal_interface-curses-forms.adb  (+58 more)
c++/: Makefile  Makefile.in  README-first  cursesapp.cc  cursesapp.h  cursesf.cc  cursesf.h  cursesm.cc  cursesm.h  cursesmain.cc  cursesp.cc  cursesp.h  cursespad.cc  cursesw.cc  cursesw.h  cursslk.cc  cursslk.h  demo.cc  edit_cfg.sh  etip.h  etip.h.in  headers  internal.h  modules
data/: ansi  dumb  hp70092  linux  pc3  pcvt25h  pcvt25hc  vt100  vt200  vt300  wyse60  xterm  xterm-bold  xterm-ic  xtermc  xterms
doc/: ncurses-intro.doc  ncurses-intro.html
form/: Makefile.in  READ.ME  fld_arg.c  fld_attr.c  fld_current.c  fld_def.c  fld_dup.c  fld_ftchoice.c  fld_ftlink.c  fld_info.c  fld_just.c  fld_link.c  fld_max.c  fld_move.c  fld_newftyp.c  fld_opts.c  fld_pad.c  fld_page.c  fld_stat.c  fld_type.c  fld_user.c  form.h  form.priv.h  frm_adabind.c  frm_cursor.c  frm_data.c  frm_def.c  frm_driver.c  frm_hook.c  frm_opts.c  frm_page.c  frm_post.c  frm_req_name.c  frm_scale.c  frm_sub.c  frm_user.c  frm_win.c  fty_alnum.c  fty_alpha.c  fty_enum.c  (+8 more)
include/: Caps  Caps.aix4  Caps.hpux11  Caps.keys  Caps.osf1r5  Caps.uwin  MKcurses.sh  MKhashsize.sh  MKkey_defs.sh  MKparametrized.sh  MKterm.h.awk  MKterm.h.awk.in  Makefile.in  capdefaults.c  config_h.in  curses.events  curses.h  curses.h.in  curses.tail  curses.wide  edit_cfg.sh  headers  nc_access.h  nc_alloc.h  nc_mingw.h  nc_panel.h  nc_termios.h  nc_win32.h  nc_win32.h.in  ncurses_cfg.hin  ncurses_defs  ncurses_dll.h  ncurses_mingw.h  object.h  parametrized.sh  progs.priv.h  system.h  term_entry.h  termcap.h  termcap.h.in  (+5 more)
man/: MKada_config.in  MKncu_config.in  MKterminfo.sh  Makefile  Makefile.in  NOTES  captoinfo.1m  clear.1  curs_add_wch.3x  curs_add_wchstr.3x  curs_addch.3x  curs_addchst.3x  curs_addchstr.3x  curs_addstr.3x  curs_addwstr.3x  curs_attr.3x  curs_beep.3x  curs_bkgd.3x  curs_bkgrnd.3x  curs_border.3x  curs_border_set.3x  curs_clear.3x  curs_color.3x  curs_delch.3x  curs_deleteln.3x  curs_delln.3x  curs_extend.3x  curs_get_wch.3x  curs_get_wstr.3x  curs_getcchar.3x  curs_getch.3x  curs_getstr.3x  curs_getyx.3x  curs_in_wch.3x  curs_in_wchstr.3x  curs_inch.3x  curs_inchstr.3x  curs_initscr.3x  curs_inopts.3x  curs_ins_wch.3x  (+116 more)
menu/: Makefile.in  READ.ME  eti.h  headers  llib-lmenu  llib-lmenuw  m_adabind.c  m_attribs.c  m_cursor.c  m_driver.c  m_format.c  m_global.c  m_hook.c  m_item_cur.c  m_item_nam.c  m_item_new.c  m_item_opt.c  m_item_top.c  m_item_use.c  m_item_val.c  m_item_vis.c  m_items.c  m_new.c  m_opts.c  m_pad.c  m_pattern.c  m_post.c  m_req_name.c  m_scale.c  m_spacing.c  m_sub.c  m_trace.c  m_userptr.c  m_win.c  menu.h  menu.priv.h  menu_attribs.c  menu_driver.c  menu_format.c  menu_hook.c  (+8 more)
misc/: Makefile.in  dotic.in  emx.src  form.def  gen-pkgconfig.in  gen_edit.sh  hackguide.doc  hackguide.html  jpf-indent  magic  makedef.cmd  makellib  menu.def  ncu-indent  ncurses-config.in  ncurses-intro.doc  ncurses-intro.html  ncurses.def  panel.def  run_tic.in  run_tic.sh  shlib  tdlint  terminfo.src
ncurses/: MKcaptab.awk  MKexpanded.sh  MKfallback.sh  MKkeyname.awk  MKlib_gen.sh  MKnames.awk  MKunctrl.awk  Makefile.in  README  SigAction.h  alloc_entry.c  captoinfo.c  comp_error.c  comp_expand.c  comp_hash.c  comp_parse.c  comp_scan.c  curses.priv.h  define_key.c  doalloc.c  fallback.c  fifo_defs.h  hardscroll.c  hashmap.c  home_terminfo.c  keyok.c  keys.list  lib_acs.c  lib_adabind.c  lib_addch.c  lib_addstr.c  lib_baudrate.c  lib_beep.c  lib_bkgd.c  lib_box.c  lib_chgat.c  lib_clear.c  lib_clearok.c  lib_clrbot.c  lib_clreol.c  (+114 more)
package/: mingw-ncurses.nsi  mingw-ncurses.spec  ncurses.map  ncurses.spec  ncurses.sym  ncursest.map  ncursest.spec  ncursest.sym  ncursestw.map  ncursestw.sym  ncursesw.map  ncursesw.sym
panel/: Makefile.in  headers  llib-lpanel  modules  p_above.c  p_below.c  p_bottom.c  p_delete.c  p_hidden.c  p_hide.c  p_move.c  p_new.c  p_replace.c  p_show.c  p_top.c  p_update.c  p_user.c  p_win.c  panel.c  panel.h  panel.priv.h
progs/: MKtermsort.sh  Makefile.in  capconvert  clear.c  clear_cmd.c  comp_main.c  dump_entry.c  dump_entry.h  infocmp.c  modules  progs.priv.h  reset_cmd.c  tabs.c  termsort.sh  tic.c  toe.c  tput.c  tset.c  write_entry.c
src/: Caps  Config  Configure  MKcaps.awk  MKcaptab.awk  MKhashsize.sh  MKkeyname.awk  MKnames.awk  MKterm.h.awk  Makefile.dist  Makefile.in  Makefile.nux  README  SigAction.h  alloc_entry.c  capdefaults.c  captoinfo.c  clear.c  comp_error.c  comp_hash.c  comp_main.c  comp_parse.c  comp_scan.c  copyright  curses.h  curses.priv.h  dump_entry.c  dump_entry.h  edit_cfg.sh  hardscroll.c  infocmp.c  lib_acs.c  lib_addch.c  lib_addstr.c  lib_beep.c  lib_bkgd.c  lib_box.c  lib_clear.c  lib_clrbot.c  lib_clreol.c  (+68 more)
tack/: HISTORY  Makefile.in  ansi.c  charset.c  color.c  control.c  crum.c  edit.c  fun.c  init.c  modules  output.c  pad.c  scan.c  sync.c  sysdep.c  tack.c  tack.h
test/: Makefile.dist  Makefile.in  README  aclocal.m4  back_ground.c  background.c  battle.c  blue.c  bs.c  cardfile.c  chgat.c  clip_printw.c  color_content.c  color_name.h  color_set.c  combine.c  configure  configure.in  copy.c  corner.c  define_key.c  demo_altkeys.c  demo_defkey.c  demo_forms.c  demo_keyok.c  demo_menus.c  demo_new_pair.c  demo_panels.c  demo_tabs.c  demo_termcap.c  demo_terminfo.c  ditto.c  dots.c  dots_curses.c  dots_mvcur.c  dots_termcap.c  dots_xcurses.c  dup_field.c  echochar.c  edit_field.c  (+72 more)
test/package/debian/: rules
test/package/debian-mingw64/: copyright
(+672 files in other folders)
